--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -105,35 +105,35 @@ platon_mentionslegales:
     defaults:
         template: 'statique/mentionslegales.html.twig'
 
-# platon_mentionslegales:
-#     path: /cgu
-#     controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-#     defaults:
-#         template: 'statique/cgu.html.twig'
+platon_cgu:
+    path: /cgu
+    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults:
+        template: 'statique/cgu.html.twig'
 
-# platon_mentionslegales:
-#     path: /contact
-#     controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-#     defaults:
-#         template: 'statique/contact.html.twig'
+platon_contact:
+    path: /contact
+    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults:
+        template: 'statique/contact.html.twig'
 
-# platon_mentionslegales:
-#     path: /informationslegales
-#     controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-#     defaults:
-#         template: 'statique/informationslegales.html.twig'
+platon_informationslegales:
+    path: /informations-legales
+    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults:
+        template: 'statique/informationslegales.html.twig'
 
-# platon_mentionslegales:
-#     path: /parametresdescookies
-#     controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-#     defaults:
-#         template: 'statique/parametresdescookies.html.twig'
+platon_parametresdescookies:
+    path: /parametresdescookies
+    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults:
+        template: 'statique/parametresdescookies.html.twig'
 
-# platon_mentionslegales:
-#     path: /lachartedeplaton
-#     controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-#     defaults:
-#         template: 'statique/lachartedeplaton.html.twig'
+platon_lachartedeplaton:
+    path: /lachartedeplaton
+    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults:
+        template: 'statique/lachartedeplaton.html.twig'
 
 
 
