--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -82,6 +82,20 @@ platon_user_delete:
     path : /user/{id}/delete
     controller : App\Controller\UserController::delete
 
+    # /*********************** Ticket ********************/
+platon_ticket_remove:
+    path: /ticket/remove/{idTicket}
+    controller: App\Controller\LandingController::removeTicket
+
+platon_ticket_update:
+    path: /ticket/update/{idTicket}
+    controller: App\Controller\LandingController::finishClass
+
+# On transmet l'id du User dans l'url afin de le récupérer en tant que receiver dans le ticket
+platon_ticket_create:
+    path : /ticket/new/{user}
+    controller : App\Controller\UserController::newTicket
+
 
     # /*********************** registration ********************/
 
