--- a/.env
+++ b/.env
@@ -30,3 +30,8 @@ DATABASE_URL="mysql://root:root@127.0.0.1:3306/platon_db?serverVersion=5.7&chars
 ###> symfony/mailer ###
 MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
