--- a/.env.local
+++ b/.env.local
@@ -28,5 +28,5 @@ DATABASE_URL="mysql://root:root@127.0.0.1:3306/platon_db?serverVersion=5.7&chars
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost
+MAILER_DSN='gmail+smtp://retrouvaille.ami:vbdpflpqebifcfpx@default'
 ###< symfony/mailer ###
